--- a/public/css/main.css
+++ b/public/css/main.css
@@ -618,3 +618,11 @@ a {
 #login .nav-title {
     font-size: 2em;
 }
+
+/* code invisibilidade */
+.visivels {
+    display: block;
+}
+.invisivels {
+    display: none;
+}
