--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -123,10 +123,10 @@
                 <div class="card-body">
                     <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
-                    <h1 class="card-text  font-weight-bold">{{Planos.0.preco}}$00</h1>
-                    <p class="card-text font-weight-bold">{{Planos.0.qtd_megas}} MegaBytes</p>
+                    <h1 class="card-text  font-weight-bold">{{Planos.0.qtd_megas}}MB</h1>
                     <p class="card-text font-weight-bold">Download {{Planos.0.txdownload}} Mb/s</p>
                     <p class="card-text font-weight-bold">Upload {{Planos.0.txupload}} Mb/s</p>
+                    <p class="card-text font-weight-bold">{{Planos.0.preco}}$00</p>
                     {{#if User}}
                         {{#if User.confirme}}
                             <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
@@ -145,10 +145,10 @@
                 <div class="card-body">
                     <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
-                    <h1 class="card-text font-weight-bold">{{Planos.1.preco}}$00</h1>
-                    <p class="card-text font-weight-bold">{{Planos.1.qtd_megas}} MegaBytes</p>
+                    <h1 class="card-text font-weight-bold">{{Planos.1.qtd_megas}}MB</h1>
                     <p class="card-text font-weight-bold">Download {{Planos.1.txdownload}} Mb/s</p>
                     <p class="card-text font-weight-bold">Upload {{Planos.1.txupload}} Mb/s</p>
+                    <p class="card-text font-weight-bold">{{Planos.1.preco}}$00</p>
                     {{#if User}}
                         {{#if User.confirme}}
                             <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
@@ -167,10 +167,10 @@
                 <div class="card-body">
                     <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
-                    <h1 class="card-text font-weight-bold">{{Planos.2.preco}}$00</h1>
-                    <p class="card-text font-weight-bold">{{Planos.2.qtd_megas}} MegaBytes</p>
+                    <h1 class="card-text font-weight-bold">{{Planos.2.qtd_megas}}MB</h1>
                     <p class="card-text font-weight-bold">Download {{Planos.2.txdownload}} Mb/s</p>
                     <p class="card-text font-weight-bold">Upload {{Planos.2.txupload}} Mb/s</p>
+                    <p class="card-text font-weight-bold">{{Planos.2.preco}}$00</p>
                     {{#if User}}
                         {{#if User.confirme}}
                             <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
