fix data on email & model, migration booking & places

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -624,6 +624,14 @@ a {
 .invisivels {
     display: none;
 }
+/* fazer sumary ser flotuante */
+#sumario {
+    position: fixed;
+    right: 2%;
+}
+#sumario2 {
+    position: relative;
+}
 
 /* helpers */
 .lili {
