--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -254,7 +254,7 @@
 
 
         </div>
-        <div class="col-md-3">
+        <div id="sumario" class="col-md-3 sumario">
             <div id="status" class="card mt-5">
                 <div class="card-body">
                     <table class="able">
@@ -281,8 +281,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </section>
 
