fix sumary & seed places

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -630,8 +630,11 @@ a {
     right: 2%;
 }
 .sumario2 {
-    position: relative;
+    position: fixed;
+    right: 2%;
+    top: 7%;
 }
+
 
 /* helpers */
 .lili {
