--- a/views/booking/pagamento.handlebars
+++ b/views/booking/pagamento.handlebars
@@ -73,6 +73,13 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <img src="/images/virifiedbyvisa_semfundo.png" width="200" height="100">
+            <img src="/images/visa.png" width="100" height="100">
+        </div>
+    </div>
 </section>
 
 
