image to pagamento visas

--- a/views/booking/pagamento.handlebars
+++ b/views/booking/pagamento.handlebars
@@ -74,6 +74,8 @@
                         <li class="list-inline">Dias: {{booking.0.numdias}}</li>
                         <li class="list-inline">Pickup: {{pickuplocal.0.nome}}</li>
                         <li class="list-inline">Return: {{returnlocal.0.nome}}</li>
+                        <hr>
+                        <li class="list-inline">TOTAL: 0000$00</li>
                     </ul>
                 </div>
             </div>
